--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo-google-fonts/fira-sans": "^0.2.2",
     "@expo/react-native-action-sheet": "^4.0.1",
+    "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-navigation/bottom-tabs": "^6.5.5",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/stack": "^6.3.12",
@@ -25,6 +26,7 @@
     "expo-font": "~11.0.1",
     "expo-image-picker": "~14.0.2",
     "expo-linear-gradient": "~12.0.1",
+    "expo-mail-composer": "^12.1.1",
     "expo-status-bar": "~1.4.2",
     "express": "^4.18.2",
     "mongoose": "^6.9.2",
